# MedRas2

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
attached_assets/: CHAPTER_VI_demo_1779524755314.docx  CHAPTER_V_1779623924220.docx  CHAPTER_V_demo_2_1779478960731.docx  Copy_of_DR.RITESH_KUMAR_PANDA_FINAL_COPY_1779786373686.docx  Copy_of_DR_VANAROJA_1778182518192.docx  Copy_of_siva_krishna_1779786373687.docx  Core_Modules_1777477219639.docx  Dr._Jenie_corrected_1779975926219.docx  PRD1_Statistical_FINAL_REVISED_1777609708425.docx  Pasted--ADDENDUM-A-MISSING-CODE-FIXES--1777541853864_1777541853866.txt  Pasted--Auto-saved-Chapter-III-Review-of-Literature-1-Pathophy_1779894234146.txt  Pasted--Comparative-Evaluation-Of-Maintaining-Hemodynamic-Stab_1779898162285.txt  Pasted--Fix-the-following-issues-in-analysis-Step-4-Data-quali_1777668640092.txt  Pasted--Keep-all-existing-backend-classification-logic-Only-ch_1777642404731.txt  Pasted-1-Introduction-to-Postoperative-Sore-Throat-and-Preoper_1779907202993.txt  Pasted-A-ARTICLES-Journal-Ready-Academic-Writing-1-Case-Report_1778186643646.txt  Pasted-Add-a-Practice-Data-Generator-and-Excel-Download-featur_1777924278232.txt  Pasted-Add-a-smart-3-step-intake-flow-to-the-plagiarism-module_1778008835784.txt  Pasted-Add-a-smart-RAG-system-to-Medras-for-the-Proposal-Writi_1778047310301.txt  Pasted-Add-two-things-to-MedRAS-Read-everything-before-startin_1779295946104.txt  Pasted-All-six-fixes-are-confirmed-complete-Before-we-finish-d_1779280150128.txt  Pasted-Before-building-anything-new-apply-these-7-safety-fixes_1777877164651.txt  (+44 more)
(+224 files in other folders)
