[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mammoth>=1.12.0",
    "openai>=2.33.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.46.0",
]
