[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lifelines>=0.30.3",
    "mammoth>=1.12.0",
    "matplotlib>=3.10.9",
    "missingno>=0.5.2",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pingouin>=0.6.1",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "reportlab>=4.5.0",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "slowapi>=0.1.9",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.46.0",
    "xlrd>=2.0.2",
]
